--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -22,6 +22,22 @@
 
     <style>
 
+        #loading {
+
+
+            position:fixed;
+            top:50%;
+            right:50%;
+            width:auto;
+            height: auto;
+            background-color: #666;
+
+            background-repeat: no-repeat;
+            background-position: center;
+            z-index:10000000;
+            opacity: 0.4;
+            filter: alpha(opacity=40);
+        }
         .modal {
             display: none; /* Hidden by default */
             position: fixed; /* Stay in place */
@@ -86,6 +102,7 @@
 
     </div>
 </nav>-->
+<img id="loading" src="http://loadinggif.com/images/image-selection/3.gif" style="display:none">
 
 <!--modal-->
 <div id="myModal" class="modal container">
@@ -285,7 +302,8 @@
             {
                 typeofuser=document.getElementById('organizer').value;
             }
-debugger;
+            debugger;
+            document.getElementById("loading").style.display="block";
             $.ajax({
                 type: "GET",
                 url: "/signup/me",
@@ -294,6 +312,7 @@ debugger;
                     debugger;
                     if(data ==="Success"){
                         debugger;
+                        document.getElementById("loading").style.display="none";
                         document.getElementById("myModal").style.display="block";
                         // document.getElementById("success").style.display="block";
 
