--- a/src/main/resources/templates/homepage.html
+++ b/src/main/resources/templates/homepage.html
@@ -415,7 +415,7 @@ text-align:center"><h4 style="color:#AE0D0D;">Connect with Us</h4></div></div>
 <script>
 
 function Search(){
-	document.location.href = "/search";
+	document.location.href = "/search?id="+document.getElementById("myInput").value;
 }
 
 //var x = document.getElementById("demo");
