--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -147,7 +147,8 @@ body, html, .container-fluid {
 
     </div>
 </nav>-->
-<img id="loading" src="http://loadinggif.com/images/image-selection/3.gif" style="display:none">
+<!--<img id="loading" src="http://loadinggif.com/images/image-selection/3.gif" style="display:none">-->
+<img id="loading" src="https://cdn.dribbble.com/users/107759/screenshots/2436386/copper-loader.gif" style="display:none">
 
 <!--modal-->
 <div id="myModal" class="modal container" style="font-family: 'Open Sans', sans-serif;
