--- a/src/main/resources/templates/Search.html
+++ b/src/main/resources/templates/Search.html
@@ -4,6 +4,8 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1"> 
+		<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Open+Sans|Oxygen" rel="stylesheet">
 	    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 	    <link rel="stylesheet" type="text/css" th:href="@{css/Search.css}">
 	    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -41,6 +43,80 @@
 			}
 		</style>
 
+		<style>
+	 		.fa {
+				padding-top:10px;
+			    padding-right: 10px;
+			    padding-left:10px;
+			    padding-bottom:10px;
+			    font-size: 20px;
+			    width: 40px;
+			    text-align: center;
+			    text-decoration: none;
+			    margin: 5px 2px;
+			    border-radius: 50%;
+			}
+			.fa:hover {
+			    opacity: 0.7;
+				color:white;
+			}
+			.fa-facebook {
+			  background: #3B5998;
+			  color: white;
+			}
+			.fa-twitter {
+			  background: #55ACEE;
+			  color: white;
+			}
+			.fa-google {
+			  background: #dd4b39;
+			  color: white;
+			}
+			.fa-instagram {
+			  background: #125688;
+			  color: white;
+			}
+			body{
+			font-family: 'Oxygen', sans-serif;
+			}
+			.card {
+			    transition: 0.3s;  
+			    border-radius: 5px;
+				background-color:white;
+				<!--border:1px solid #F0EDED;-->
+				border:1px solid ;
+			}
+			* Tooltip container */
+			.tooltip {
+			    position: relative;
+			    display: inline-block;
+			    border-bottom: 1px dotted black; /* If you want dots under the hoverable text */
+			}
+			/* Tooltip text */
+			.tooltip .tooltiptext {
+			    visibility: hidden;
+			    width: 120px;
+			    background-color: black;
+			    color: #fff;
+			    text-align: center;
+			    padding: 5px 0;
+			    border-radius: 6px;
+			    /* Position the tooltip text - see examples below! */
+			    position: absolute;
+			    z-index: 1;
+			}
+			/* Show the tooltip text when you mouse over the tooltip container */
+			.tooltip:hover .tooltiptext {
+			    visibility: visible;
+			}
+			img {
+			    border-radius: 5px 5px 0 0;
+			}
+			.container {
+			    padding: 2px 16px;
+			}
+		</style>
+		
 	</head>
 	
 	<body>
@@ -63,48 +139,30 @@
 	</div>
 <!--Advertisement-->
 
-		<!-- <div id="header">
-			<script>
-	            $("#header").load("header.html");
-	        </script>
-		</div> -->
-		<!-- Navigation bar -->
-		<nav class="navbar navbar-expand-sm navbar-dark fixed-top">
-  			<!--  Brand/logo -->
-  			<a class="navbar-brand" href="#">
-  				<img id="logoimg" src="Logo 4.jpg" class="img-fluid">
-  			</a>
-  			
-  			<ul id="navbarlist" class="navbar-nav">
-			    <li id="navbarlistitem" class="nav-item">
-			      <a class="nav-link" href="HomePage.html">Home</a>
-			    </li>
-			    <li id="navbarlistitem" class="nav-item">
-			      <a class="nav-link" href="#">Explore</a>
-			    </li>
-			    <li id="navbarlistitem" class="nav-item">
-			      <a class="nav-link" href="create_event.html">Create Event</a>
-			    </li>
-			    <li id="navbarlistitem" class="nav-item">
-			      <a class="nav-link" href="#">Sign In</a>
-			    </li>
-			</ul>
-			
-			<div id=smallmenucontainer>
-				<button id="smallmenu" class="btn dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-					<div id="menuicon"></div>
-					<div id="menuicon"></div>
-					<div id="menuicon"></div>
-				</button>
-				<div id="smallmenuitem" class="dropdown-menu">
-				    <a class="dropdown-item" href="HomePage.html">Home</a> 
-				    <a class="dropdown-item" href="#">Explore</a> 
-				    <a class="dropdown-item" href="create_event.html">Create Event</a> 
-				    <a class="dropdown-item" href="#">Sign In</a> 
+	<div class="container-fluid" style="background-color:;color:#AE1616;padding:10px;border-bottom:1px solid lightgrey;">
+			<div class="row">
+   				<div class="col-sm-2"><a href="/" style="text-decoration: none"><h4 style="color:#AE0D0D;background-color:white;text-align:center">HoosierEvents</h4></a></div>
+				<div class="col-sm-1"><button class="btn-default xyz" style="color:#AE0D0D;background-color:white;border:0px;"><h5>Explore</h5></button></div>
+				<div class="col-sm-5"><input type="text" class="form-control" id="myInput" placeholder="Search"></div>
+				<div class="col-sm-1"><button id="myBtn" style="display:none;" onclick="Search()"></button></div>
+				<div class="col-sm-1">  
+					<form action="/profile_sample">
+				        <button class="btn-default xyz" id="profileButton"  style="color:#AE0D0D;background-color:green;border:0px; display: none; background: url(/images/profile_img.jpg)">Profile</button>
+				    </form>
 			    </div>
-			 </div>
-			 
- 		</nav>
+				<div class="col-sm-1">
+				    <form action="/login">
+				    <button class="btn-default xyz" id="loginbutt" style="color:#AE0D0D;background-color:white;border:0px;display: none"><h5>Login</h5></button>
+				    </form>
+				</div>
+				<div class="col-sm-1">
+				    <form action="/logout">
+				        <button class="btn-default xyz" id="logoutbutt"  style="color:#AE0D0D;background-color:white;border:0px; display: none"><h5>Logout</h5></button>
+				    </form>
+			  
+				</div>
+			</div>
+		</div>
  		
  		<!-- Carousel with search bar -->
  		<div class="container">
@@ -128,135 +186,35 @@
 				  
 				</div>
  		</div>
- 		<div>
-	 		<div class="row" ><h3 id="event_title">Hello</h3></div>
-			<div class="row" ><h5 id="event_date"></h5></div>
-			<div class="row" ><h5 id="event_location"></h5></div>
-			<div class="row" ><h5 id="event_description"></h5></div>
-			<div class="row" ><h5 id="created_by"></h5></div>
- 		</div>
  		
-			
-		<!-- Footer -->
-		<footer class="page-footer font-small unique-color-dark">
-		
-		    <div id="footertopbar">
-		      <div class="container">
-		
-		        <!-- Grid row-->
-		        <div class="row py-4 d-flex align-items-center">
-		
-		          <!-- Grid column -->
-		          <div class="col-md-6 col-lg-5 text-center text-md-left mb-4 mb-md-0">
-		            <h6 class="mb-0">Get connected with us on social networks!</h6>
-		          </div>
-		          <!-- Grid column -->
-		
-		          <!-- Grid column -->
-		          <div class="col-md-6 col-lg-7 text-center text-md-right">
-		
-		            <!-- Facebook -->
-		            <a id="socialmedialink" href="https://www.facebook.com/HoosierEvents-171611190445772/?view_public_for=171611190445772" class="fb-ic">
-		              <i class="fa fa-facebook white-text mr-4"> </i>
-		            </a>
-		            <!-- Twitter -->
-		            <a id="socialmedialink" href="https://twitter.com/EventsHoosier" class="tw-ic">
-		              <i class="fa fa-twitter white-text mr-4"> </i>
-		            </a>
-		            <!-- Google +-->
-		            <a id="socialmedialink" href="https://plus.google.com/u/0/106790516341153503048" class="gplus-ic">
-		              <i class="fa fa-google-plus white-text mr-4"> </i>
-		            </a>
-		            <!--Linkedin -->
-		            <!-- <a id="socialmedialink" href="#" class="li-ic">
-		              <i class="fa fa-linkedin white-text mr-4"> </i>
-		            </a> -->
-		            <!--Instagram-->
-		            <a id="socialmedialink" href="#" class="ins-ic">
-		              <i class="fa fa-instagram white-text"> </i>
-		            </a>
-		
-		          </div>
-		          <!-- Grid column -->
-		
-		        </div>
-		        <!-- Grid row-->
-		
-		      </div>
-		    </div>
-		
-		    <!-- Footer Links -->
-		    <div id="footer" class="container text-center text-md-left mt-5">
-		
-		      <!-- Grid row -->
-		      <div class="row mt-3">
-		
-		        <!-- Grid column -->
-		        <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
-		
-		          <!-- Content -->
-		          <h6 class="text-uppercase font-weight-bold">Hoosier Events</h6>
-		          <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-		          <p> Connect with other enthusiasts and do what you enjoy. Signup to explore and host events!</p>
-		
-		        </div>
-		        <!-- Grid column -->
-
-		
-		        <!-- Grid column -->
-		        <div  class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
-		
-		          <!-- Links -->
-		          <h6 class="text-uppercase font-weight-bold">Useful links</h6>
-		          <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-		          <p>
-		            <a href="#!">Your Account</a>
-		          </p>
-		          <p>
-		            <a href="#!">Organize an event</a>
-		          </p>
-		          <p>
-		            <a href="#!">About us</a>
-		          </p>
-		          <p>
-		            <a href="#!">Help</a>
-		          </p>
-		
-		        </div>
-		        <!-- Grid column -->
-		
-		        <!-- Grid column -->
-		        <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
-		
-		          <!-- Links -->
-		          <h6 class="text-uppercase font-weight-bold">Contact</h6>
-		          <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-		          <p>
-		            <i class="fa fa-home mr-3"></i> Bloomington, IN 47408, US</p>
-		          <p>
-		            <i class="fa fa-envelope mr-3"></i>hoosiereventsiu@gmail.com</p>
-		          <p>
-		            <i class="fa fa-phone mr-3"></i> + 01 234 567 88</p>
-		          <p>
-		            <i class="fa fa-print mr-3"></i> + 01 234 567 89</p>
-		
-		        </div>
-		        <!-- Grid column -->
-		
-		      </div>
-		      <!-- Grid row -->
-		
-		    </div>
-		    <!-- Footer Links -->
-		
-		    <!-- Copyright -->
-		    <div class="footer-copyright text-center py-3">© 2018 Copyright:
-		      <a href="https://mdbootstrap.com/bootstrap-tutorial/"> HoosierEvents</a>
-		    </div>
-		    <!-- Copyright -->
-		
-		  </footer>
-		  <!-- Footer -->
+ 		<div class="container-fluid" style="border-top:1px solid lightgrey;text-align:center;top:20%;height:auto;position:relative;background-color: !important;color:">
+			<br><div class="row" style="background-color:;">
+			<div class="col-sm-6 links" style="color:#AE0D0D;"><div class="row"  style="font-family: 'Oxygen', sans-serif;
+		background-color:"><div class="col-sm-12"><h4>About HoosierEvents</h4></div></div>
+				
+					<div class="row"><div class="col-sm-12"><h5><a href="" style="font-family: 'Open Sans', sans-serif;
+			color:#3C48AE">Sitemap</a></h5></div></div>
+					<div class="row"><div class="col-sm-12"><h5><a href="" style="font-family: 'Open Sans', sans-serif;
+			color:#3C48AE">About us</a></h5></div></div>
+					<div class="row"><div class="col-sm-12"><h5><a href="" style="font-family: 'Open Sans', sans-serif;
+			color:#3C48AE">FAQs</a></h5></div></div>
+					<br>
+				</div>
+				
+				<div class="col-sm-6"><div class="row"  style="background-color:"><div class="col-sm-12" style="font-family: 'Oxygen', sans-serif;
+			text-align:center"><h4 style="color:#AE0D0D;">Connect with Us</h4></div></div>
+					<div class="row">
+					<div class="col-sm-4"></div>
+					<div class="col-sm-1" style="padding-right:25px;" ><a href="https://www.facebook.com/HoosierEvents" class="fa fa-facebook"></a></div>
+						<div class="col-sm-1" style="padding-right:25px;"><a href="https://twitter.com/hoosierevents" class="fa fa-twitter"></a></div>
+						<div class="col-sm-1" style="padding-right:25px;" ><a href="#" class="fa fa-google"></a></div>
+						<div class="col-sm-1" style="padding-right:25px;" ><a href="https://www.instagram.com/eventshoosier/" class="fa fa-instagram"></a></div>
+						<div class="col-sm-4"></div>
+					</div>
+				</div>
+			</div>
+		</div>
+ 		
 	<script>
         function GET() {
             var data = [];
