--- a/src/main/resources/static/css/admin_profile.css
+++ b/src/main/resources/static/css/admin_profile.css
@@ -54,14 +54,15 @@
 
 .abcd
 {
-	background-color:#9cf;
+	background-color:white;
 	color:black;
 	transition:0.4s;
+	
 }
 
 .abcd:hover{
 	    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-		background-color:#9de;
+		background-color:;
 
 	
 }
