--- a/src/main/resources/templates/homepage.html
+++ b/src/main/resources/templates/homepage.html
@@ -220,9 +220,9 @@ img {
 </nav>-->
 
 <div class="container" style="width:100%">
-<img class="mySlides" src="/images/p3.jpg" style="width:100%;height:auto;">
-<img class="mySlides" src="/images/p22.jpg" style="width:100%;height:auto;">
-<img class="mySlides" src="/images/a1.jpg" style="width:100%;height:auto;">
+<img class="mySlides" src="/images/hoosierfootball.jpg" style="width:100%;height:auto;">
+<img class="mySlides" src="/images/theatre1.jpg" style="width:100%;height:auto;">
+<img class="mySlides" src="/images/ideas.jpg" style="width:100%;height:auto;">
 <!--<img src="bg.jpg" style="width:100%;height:100%;">-->
 </div><br>
 
