--- a/src/main/resources/templates/Search.html
+++ b/src/main/resources/templates/Search.html
@@ -4,9 +4,10 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1"> 
+		  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
 		<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans|Oxygen" rel="stylesheet">
-	    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 	    <link rel="stylesheet" type="text/css" th:href="@{css/Search.css}">
 	    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	    <script th:src="@{script/Search.js}" type="text/javascript"></script>
@@ -115,6 +116,11 @@
 			.container {
 			    padding: 2px 16px;
 			}
+			
+			.active{
+	background-color:white;
+	color:#AE1616;
+}
 		</style>
 		
 	</head>
@@ -139,33 +145,64 @@
 	</div>
 <!--Advertisement-->
 
-	<div class="container-fluid" style="background-color:;color:#AE1616;padding:10px;border-bottom:1px solid lightgrey;">
-			<div class="row">
-   				<div class="col-sm-2"><a href="/" style="text-decoration: none"><h4 style="color:#AE0D0D;background-color:white;text-align:center">HoosierEvents</h4></a></div>
-				<div class="col-sm-1"><button class="btn-default xyz" style="color:#AE0D0D;background-color:white;border:0px;"><h5>Explore</h5></button></div>
-				<div class="col-sm-5"><input type="text" class="form-control" id="myInput" placeholder="Search"></div>
-				<div class="col-sm-1"><button id="myBtn" style="display:none;" onclick="Search()"></button></div>
-				<div class="col-sm-1">  
-					<form action="/profile_sample">
-				        <button class="btn-default xyz" id="profileButton"  style="color:#AE0D0D;background-color:green;border:0px; display: none; background: url(/images/profile_img.jpg)">Profile</button>
-				    </form>
-			    </div>
-				<div class="col-sm-1">
-				    <form action="/login">
-				    <button class="btn-default xyz" id="loginbutt" style="color:#AE0D0D;background-color:white;border:0px;display: none"><h5>Login</h5></button>
-				    </form>
-				</div>
-				<div class="col-sm-1">
-				    <form action="/logout">
-				        <button class="btn-default xyz" id="logoutbutt"  style="color:#AE0D0D;background-color:white;border:0px; display: none"><h5>Logout</h5></button>
-				    </form>
-			  
-				</div>
-			</div>
-		</div>
+<div class="container-fluid" style="background-color:;color:#AE1616;padding:10px;border-bottom:1px solid lightgrey;">
+<div class="row">
+    <div class="col-sm-2"><a href="/" style="text-decoration: none"><h4 style="color:#AE0D0D;background-color:white;text-align:center">HoosierEvents</h4></a></div>
+<div class="col-sm-1"><button class="btn-default xyz" style="color:#AE0D0D;background-color:white;border:0px;"><h5>Explore</h5></button></div>
+<div class="col-sm-5"></div>
+<div class="col-sm-1"><button id="myBtn" style="display:none;" onclick="Search()"></button></div>
+<div class="col-sm-1"> 
+        <button class="btn-default xyz" id="profileButton" onclick="navigateToProfile()" style="color:#AE0D0D;background-color:green;border:0px; display: none; background: url(/images/profile_img.jpg)">Profile</button>
+    </div>
+<div class="col-sm-1">
+    <form action="/login">
+    <button class="btn-default xyz" id="loginbutt" style="color:#AE0D0D;background-color:white;border:0px;display: none"><h5>Login</h5></button>
+    </form>
+	</div>
+	<div class="col-sm-1">
+    <form action="/logout">
+        <button class="btn-default xyz" id="logoutbutt"  style="color:#AE0D0D;background-color:white;border:0px; display: none"><h5>Logout</h5></button>
+    </form>
+  
+</div>
+</div>
+</div><br>
+<div class="container-fluid">
+<div class="row">
+<div class="col-sm-2"></div>
+<div class="col-sm-8" style="background-color:;height:650px;overflow-y:scroll;">
+<div class="row">
+<div class="col-sm-10"><input type="text" class="form-control" id="searchbartextbox"></div>
+<!--<div class="col-sm-4">
+  <div class="dropdown">
+    <button class="btn btn-block dropdown-toggle" style="width:80%;color:white;" type="button" id="searchbardropdown" data-toggle="dropdown"><h5>Search</h5></button>
+    <ul class="dropdown-menu">
+      <li><a href="#" onClick="DisplayEventsfromCategory()">Categories</a></li>
+      <li><a href="#" onClick="DisplayEventsbyLocation()">Location</a></li>
+    </ul>
+  </div>
+</div>-->
+</div><br>
+<div class="row" id="searchoptions">
+<div class="col-sm-3">Search By:</div>
+<div class="col-sm-2"><button class="btn-block ss" onclick="DisplayEvent()"> Name</button></div>
+<div class="col-sm-2"><button class="btn-block ss" onclick="DisplayEventsfromCategory()">Category</button></div>
+<div class="col-sm-2"><button class="btn-block ss" onclick="DisplayEventsbyLocation()">Location</button></div>
+</div>
+<br><br>
+<div class="row">
+	<div class="col-sm-12" id="result_data">
+	
+	</div>
+</div>
+
+</div>
+<div class="col-sm-2"></div>
+</div>
+</div>
  		
  		<!-- Carousel with search bar -->
- 		<div class="container">
+ 		<!--<div class="container">
 				
 				<div id="searchbar" class="input-group">
 					<div id="searchbarcol" class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
@@ -178,14 +215,13 @@
 				      <a class="dropdown-item" onClick="DisplayCategories()">List of Categories</a>
 				      <a class="dropdown-item" onClick="DisplayEventsbyLocation()">Location</a>
 				      <a class="dropdown-item" onClick="DisplayEvent()">By Event</a>
-				      <!-- <a class="dropdown-item" href="#">Something else here</a> -->
 				      <div role="separator" class="dropdown-divider"></div>
 				      <button class="dropdown-item" onClick="DisplayAllEvents()">HoosierEvents</button>
 				    </div>
 				  	</div>
 				  
 				</div>
- 		</div>
+ 		</div>-->
  		
  		<div class="container-fluid" style="border-top:1px solid lightgrey;text-align:center;top:20%;height:auto;position:relative;background-color: !important;color:">
 			<br><div class="row" style="background-color:;">
@@ -216,6 +252,20 @@
 		</div>
  		
 	<script>
+	var header = document.getElementById("searchoptions");
+var btns = header.getElementsByClassName("btn");
+for (var i = 0; i < btns.length; i++) {
+  btns[i].addEventListener("click", function() {
+    var current = document.getElementsByClassName("active");
+    if (current.length > 0) { 
+      current[0].className = current[0].className.replace(" active", "");
+    }
+    this.className += " active";
+  });
+}
+	
+	
+	
         function GET() {
             var data = [];
             for(x = 0; x < arguments.length; ++x)
@@ -240,7 +290,7 @@
  			url:"/getAllEvents",
  			  success: function(data) {
  					console.log('success',data);
- 					document.getElementById("event_title").innerHTML=data;
+ 					document.getElementById("result_data").innerHTML=data;
 
  			   },
  			   error:function(exception){alert('Exception:'+exception);}})
@@ -256,7 +306,46 @@
 			url:"/getEventsbyCategory",
 			success: function(data) {
 				console.log('success',data);
-				document.getElementById("event_title").innerHTML=data[0].eventTitle;
+				
+				document.getElementById("result_data").innerHTML="";
+				var i;
+				alert(data.length);
+				alert(data[0].eventTitle);
+				for (i=0;i<data.length;i++)
+				{
+							
+				var x=document.createElement("div");
+				x.className="col-sm-6 abc";
+			//	x.style="border:1px solid lightgrey;width:60%;left:20%;min-width:300px;min-height:auto;max-height:auto !important;position:relative;";
+				x.style="padding:15px;border-radius:4px;min-height:auto;min-width:200px;max-width:500;max-height:auto;font-family: 'Open Sans', sans-serif;";
+
+				//x.innerHTML="<div class='container'><div class='row'><div class='col-sm-6'><p>"+element.eventTitle+"</p><p>"+element.location+"</p></div><div class='col-sm-6'><img src='/getImage?img="+element.id+".jpg' style='width:100%;min-height:155px;max-height:250px;'></div></div></div>>";
+				x.innerHTML="<img src='/getImage?img="+data[i].id+".jpg' style='width:100%;height:auto;'>";
+				x.innerHTML+="<div class='container'><div class='row'><div class='col-sm-12'>"+data[i].eventTitle+"</div></div><div class='row'><div class='col-sm-12' style='color:green;'>"+data[i].location+"</div></div></div>";
+				//x.id=element.id;
+
+				x.id=data[i].id;
+				//alert(x.id);
+			//	document.getElementById(x.id).onclick="sendevent()";
+				//x.addEventListener("click",sendevent);
+
+				//i=i+1;
+										//		x.innerHTML="<p>"+element.eventTitle+"</p>";
+
+				//x.addEventListener("click",sendevent);
+
+				//temp="displayrow"+1;
+				document.getElementById("result_data").appendChild(x);
+							
+							
+								//document.getElementById("result_data").innerHTML+=data[i].eventTitle;
+
+				}
+				
+				
+				
+				
+				//document.getElementById("result_data").innerHTML=data[0].eventTitle;
 			   },
 		   error:function(exception){alert('Exception:'+exception);}})
 	}
@@ -272,7 +361,39 @@
 			success: function(data) {
 				console.log('success',data);
 				console.log("${m.event}");
-				document.getElementById("event_title").innerHTML=data;
+				var i;
+				//alert(data.length);
+				//alert(data[0].eventTitle);
+				for (i=0;i<data.length;i++)
+				{
+							
+				var x=document.createElement("div");
+				x.className="col-sm-6 abc";
+			//	x.style="border:1px solid lightgrey;width:60%;left:20%;min-width:300px;min-height:auto;max-height:auto !important;position:relative;";
+				x.style="padding:15px;border-radius:4px;min-height:auto;min-width:200px;max-width:500;max-height:auto;font-family: 'Open Sans', sans-serif;";
+
+				//x.innerHTML="<div class='container'><div class='row'><div class='col-sm-6'><p>"+element.eventTitle+"</p><p>"+element.location+"</p></div><div class='col-sm-6'><img src='/getImage?img="+element.id+".jpg' style='width:100%;min-height:155px;max-height:250px;'></div></div></div>>";
+				x.innerHTML="<img src='/getImage?img="+data[i].id+".jpg' style='width:100%;height:auto;'>";
+				x.innerHTML+="<div class='container'><div class='row'><div class='col-sm-12'>"+data[i].eventTitle+"</div></div><div class='row'><div class='col-sm-12' style='color:green;'>"+data[i].location+"</div></div></div>";
+				//x.id=element.id;
+
+				x.id=data[i].id;
+				//alert(x.id);
+			//	document.getElementById(x.id).onclick="sendevent()";
+				//x.addEventListener("click",sendevent);
+
+				//i=i+1;
+										//		x.innerHTML="<p>"+element.eventTitle+"</p>";
+
+				//x.addEventListener("click",sendevent);
+
+				//temp="displayrow"+1;
+				document.getElementById("result_data").appendChild(x);
+							
+							
+								//document.getElementById("result_data").innerHTML+=data[i].eventTitle;
+
+				}
 			   },
 		   error:function(exception){alert('Exception:'+exception);}})
 	}
@@ -286,8 +407,46 @@
 			data: {event:event_name},
 			url:"/getEventbyName",
 			success: function(data) {
+				//document.getElementById("result_data").innerHTML="";
 				console.log('success',data);
-				document.getElementById("event_title").innerHTML=data.eventTitle;
+				
+											alert('success by name');
+		
+				var i;
+				alert(data.length);
+				//alert(data[0].eventTitle);
+				for (i=0;i<data.length;i++)
+				{
+				var x=document.createElement("div");
+				x.className="col-sm-6 abc";
+			//	x.style="border:1px solid lightgrey;width:60%;left:20%;min-width:300px;min-height:auto;max-height:auto !important;position:relative;";
+				x.style="padding:15px;border-radius:4px;min-height:auto;min-width:200px;max-width:500;max-height:auto;font-family: 'Open Sans', sans-serif;";
+
+				//x.innerHTML="<div class='container'><div class='row'><div class='col-sm-6'><p>"+element.eventTitle+"</p><p>"+element.location+"</p></div><div class='col-sm-6'><img src='/getImage?img="+element.id+".jpg' style='width:100%;min-height:155px;max-height:250px;'></div></div></div>>";
+				x.innerHTML="<img src='/getImage?img="+data[i].id+".jpg' style='width:100%;height:auto;'>";
+				x.innerHTML+="<div class='container'><div class='row'><div class='col-sm-12'>"+data[i].eventTitle+"</div></div><div class='row'><div class='col-sm-12' style='color:green;'>"+data[i].location+"</div></div></div>";
+				//x.id=element.id;
+
+				x.id=data[i].id;
+				//alert(x.id);
+			//	document.getElementById(x.id).onclick="sendevent()";
+				//x.addEventListener("click",sendevent);
+
+				//i=i+1;
+										//		x.innerHTML="<p>"+element.eventTitle+"</p>";
+
+				//x.addEventListener("click",sendevent);
+
+				//temp="displayrow"+1;
+				document.getElementById("result_data").appendChild(x);
+							
+							
+								//document.getElementById("result_data").innerHTML+=data[i].eventTitle;
+
+				}
+				
+				
+				//document.getElementById("event_title").innerHTML=data.eventTitle;
 			   },
 		   error:function(exception){alert('Exception:'+exception);}})
 	}
